# mlops-env

./: .gitignore  Dockerfile  README.md  baseline_scores.json  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate-submission.sh
env/: __init__.py  environment.py  models.py  simulator.py
env/tasks/: __init__.py  base.py  easy_data_triage.py  hard_incident.py  medium_deployment.py
server/: app.py
tests/: test_mlops_env.py
