[project]
name = "mlops-env"
version = "0.1.0"
description = "MLOps OpenEnv environment for data triage, deployment, and incident response"
authors = [{ name = "Vesper" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"
